...
        dropInRequest.shouldMaskSecurityCode = DemoSettings.maskSecurityCode
        dropInRequest.cardholderNameSetting = DemoSettings.cardholderNameSetting
        dropInRequest.vaultCard = DemoSettings.vaultCardSetting
        dropInRequest.allowVaultCardOverride = DemoSettings.allowVaultCardOverrideSetting
        
        if ProcessInfo.processInfo.arguments.contains("-PayPalOneTime") {
            dropInRequest.payPalRequest = BTPayPalCheckoutRequest(amount: "4.77")
        }
        
        if DemoSettings.threeDSecureRequiredStatus == .required {
            let billingAddress = BTThreeDSecurePostalAddress()
            billingAddress.givenName = "Jill"
            billingAddress.surname = "Doe"
...
                print("Error: \(error!)")
                dropInController.dismiss(animated: true, completion: nil)
                return
            }
            
            if result.isCanceled {
                self.progressBlock?("Canceled 🎲")
            } else {
                self.didSelectApplePay = (result.paymentMethodType == .applePay)
                self.progressBlock?("Ready for checkout...")
                self.selectedNonce = result.paymentMethod
                self.demoView.result = result
            }
...
